# Hydrogen2D

./: README.md  animate_2d.py  hydrogen_2d_CAP.cpp  visualize_hydrogen_2d.py
GPU_attempts/: run_hydrogen_kokkos.sh  run_hydrogen_kokkos_fixed.sh
GPU_attempts/.ipynb_checkpoints/: hydrogen-checkpoint.e37807909  hydrogen-checkpoint.e37844530  hydrogen-checkpoint.o37844427  hydrogen-checkpoint.o37844530  hydrogen_2d_CAP-checkpoint.cpp  hydrogen_final-checkpoint.e37844039  hydrogen_final-checkpoint.o37844039  hydrogen_kokkos-checkpoint.e37841078  hydrogen_perlmutter-checkpoint.e37841757  hydrogen_perlmutter-checkpoint.o37841757
GPU_attempts/hydrogen_kokkos/: CMakeLists.txt  cufft_wrapper.cu  hydrogen_simulator_2d.cpp
